--- a/challenge-locadora/src/assets/main.css
+++ b/challenge-locadora/src/assets/main.css
@@ -1,35 +1,43 @@
-@import './base.css';
+:root {
+  --ocre: #d1451e;
+  --coral: #f0633c;
+  --coral-claro: #ffdbd1;
+  --creme: #fffaf3;
+  --verde-escuro: #263a29;
+  --verde-medio: #3d6d4a;
+  --cinza: #444444;
+  --cinza-claro: #efefef;
+  --branco: #fff;
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-
-  font-weight: normal;
+  --font-family-padrao: Nunito Sans, sans-serif;
+  --cabecalhos: Paytone One, sans-serif;
 }
 
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
+ul,
+li {
+  list-style: none;
 }
 
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
+button {
+  border: 0;
+  background-color: inherit;
+  font: inherit;
+}
 
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
+body {
+  min-height: 100vh;
+  /* color: var(--creme);
+  font-family: var(--font-family-padrao);
+  font-size: 16px;
+  font-weight: 400;
+  font-style: normal;
+  background: #fefefe; */
 }
