--- a/challenge-locadora/src/assets/main.css
+++ b/challenge-locadora/src/assets/main.css
@@ -34,10 +34,11 @@ button {
 
 body {
   min-height: 100vh;
+  background: #f5f4f4;
   /* color: var(--creme);
   font-family: var(--font-family-padrao);
   font-size: 16px;
   font-weight: 400;
   font-style: normal;
-  background: #fefefe; */
+  */
 }
